--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <title>React App</title>
+    <title>RS-LANG</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
